# vqpu

./: .gitignore  LICENSE  README.md  pyproject.toml  vqpu_console.py  vqpu_desktop.py
_legacy/: vqpu_universal.py  vqpu_v3_multibackend.py
benchmark_results/optimization_benchmark/: summary.json
chesso_vqpu/: README.md  SECTION_TRACKER.md  __init__.py  run_all_smoke_tests.py
chesso_vqpu/compiler/: ir.py  lowering.py  qlambda_frontend.py
chesso_vqpu/control/: __init__.py  metrics.py  objective.py  optimizer.py  runtime.py  scheduler.py
chesso_vqpu/core/: __init__.py  hypergraph.py  types.py
chesso_vqpu/experiments/: __init__.py  ablations.py  benchmarks.py  workloads.py
chesso_vqpu/ops/: __init__.py  expansion.py  measurement.py  noise.py  unitary_ops.py
chesso_vqpu/tests/: test_section_01_smoke.py  test_section_02_smoke.py  test_section_03_smoke.py  test_section_04_smoke.py  test_section_05_smoke.py  test_section_06_smoke.py  test_section_07_smoke.py  test_section_08_smoke.py  test_section_09_smoke.py  test_section_10_smoke.py  test_section_11_smoke.py  test_section_12_smoke.py  test_section_13_smoke.py  test_section_14_smoke.py
chesso_vqpu/viz/: __init__.py  plots.py  telemetry.py
examples/: aegis_ion_on_ionq.py  aegis_ion_protein_fold.py  aegis_ion_push_cqpu.py  aegis_ion_tsp_on_ionq.py  benchmark.py  chesso_hypergraph_maxcut.py  chesso_on_ionq.py  chesso_vs_baseline.py  cryo_ionq.py  cryo_maxcut.py  dynamic.py  frontier_ionq.py  ionq_smoke_test.py  knit_heterogeneous.py  molecular.py  optimization_benchmark.py  optimize.py  phantom_benchmark.py
examples/algorithms/: chsh_live_ionq.py  grover.py  hardware_metrology.py  heterodyne_spectroscopy.py  oat_squeezed_probe.py  string_chain.py  string_chain_metrology.py  twist_untwist_mirror.py  two_axis_twisting.py  vqe_h2.py
vqpu/: __init__.py  __main__.py  core.py  cryo.py  knit.py  link.py  phantom.py  universal.py
vqpu/chesso/: __init__.py  bridge.py  run_all_smoke_tests.py
vqpu/chesso/compiler/: __init__.py  ir.py  lowering.py  qlambda_frontend.py
vqpu/chesso/control/: metrics.py  objective.py  optimizer.py  runtime.py  scheduler.py
vqpu/chesso/core/: config.py  state.py
vqpu/chesso/experiments/: __init__.py  ablations.py  aegis_ion.py  benchmarks.py  ionq_noise.py  workloads.py
vqpu/chesso/ops/: expansion.py  measurement.py  noise.py  unitary_ops.py
vqpu/chesso/tests/: test_section_01_smoke.py  test_section_02_smoke.py  test_section_03_smoke.py  (+11 more)
vqpu_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+2 files in other folders)
